# Chatorrent

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/chatorrent/: MainActivity.kt
common/: ensure_native_assets.cmake
docs/: Design.md  日志.md  立项会议.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_page.dart
lib/model/: data_model.dart  group_chat_data_model.dart  group_chat_model.dart  message_data_model.dart  server_config.g.dart
lib/pages/: chat_page.dart  group_chat_page.dart  list_demo.dart  settings_page.dart
lib/schemas/: server_config.dart
lib/services/: preferences.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/network_plugin_go_ffi/: .gitignore  README.md  ffigen.yaml  pubspec.yaml
plugins/network_plugin_go_ffi/android/: CMakeLists.txt  Makefile  build.gradle  settings.gradle
plugins/network_plugin_go_ffi/android/src/main/: .gitignore  AndroidManifest.xml
plugins/network_plugin_go_ffi/doc/: 编译测试.md
plugins/network_plugin_go_ffi/example/: README.md  pubspec.yaml
plugins/network_plugin_go_ffi/example/android/app/: build.gradle
plugins/network_plugin_go_ffi/example/android/app/src/main/: AndroidManifest.xml
plugins/network_plugin_go_ffi/example/android/app/src/main/kotlin/com/example/network_plugin_go_ffi_example/: MainActivity.kt
plugins/network_plugin_go_ffi/example/ios/Runner/: Info.plist
plugins/network_plugin_go_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/network_plugin_go_ffi/example/lib/: main.dart  native_function_handler.dart
plugins/network_plugin_go_ffi/example/linux/: CMakeLists.txt  my_application.cc
plugins/network_plugin_go_ffi/example/linux/flutter/: generated_plugins.cmake
plugins/network_plugin_go_ffi/example/macos/Runner.xcodeproj/: project.pbxproj
plugins/network_plugin_go_ffi/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
plugins/network_plugin_go_ffi/example/macos/Runner/Configs/: AppInfo.xcconfig
plugins/network_plugin_go_ffi/example/test/: native_function_handler_test.dart
plugins/network_plugin_go_ffi/example/windows/: CMakeLists.txt
plugins/network_plugin_go_ffi/example/windows/flutter/: generated_plugins.cmake
plugins/network_plugin_go_ffi/example/windows/runner/: Runner.rc  main.cpp
plugins/network_plugin_go_ffi/go/: CMakeLists.txt  go.work  go.work.sum
plugins/network_plugin_go_ffi/go/cgo/: cgo.c  cgo.go
plugins/network_plugin_go_ffi/go/network_plugin/: .gitignore  CMakeLists.txt  gen_lib.bat  go.mod  go.work  go.work.sum  network_plugin.go  network_plugin.h  register_callback.c  register_callback.h
plugins/network_plugin_go_ffi/ios/: Makefile  network_plugin_go_ffi.podspec
plugins/network_plugin_go_ffi/ios/Classes/: network_plugin_go_ffi.c
plugins/network_plugin_go_ffi/lib/: network_plugin_go_ffi.dart  network_plugin_go_ffi_bindings_generated.dart  response_proto.dart  response_proto.g.dart  webrtc_plugin.dart
plugins/network_plugin_go_ffi/lib/protobuf/: communicate.pb.dart  communicate.pbenum.dart  communicate.pbjson.dart  communicate.pbserver.dart  error.pb.dart  error.pbjson.dart  ready.pb.dart  ready.pbenum.dart  ready.pbjson.dart  ready.pbserver.dart  return.pb.dart  return.pbenum.dart  return.pbjson.dart  return.pbserver.dart
plugins/network_plugin_go_ffi/linux/: .gitignore  CMakeLists.txt  Makefile
plugins/network_plugin_go_ffi/macos/: Makefile  network_plugin_go_ffi.podspec
plugins/network_plugin_go_ffi/protobuf/: error.pb.dart  error.pbjson.dart  sessionmgr.pb.dart  sessionmgr.pbenum.dart  sessionmgr.pbjson.dart  sessionmgr.pbserver.dart
plugins/network_plugin_go_ffi/src/: CMakeLists.txt  Makefile  network_plugin_go_ffi.c  readme.md
plugins/network_plugin_go_ffi/test/: native_function_handler_test.dart  receiver_test.dart  response_proto_test.dart  sender_test.dart  webrtc_plugin_test.dart
plugins/network_plugin_go_ffi/windows/: .gitignore  CMakeLists.txt  Makefile
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
